crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__nbt__tests__boolean_false.snap
---
source: crates/mcf/src/syntax/grammar/nbt.rs
expression: "parse_nbt(\"false\")"
---
Joined(NbtBoolean) `false` at 0:0 - 0:5

