crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__nbt__tests__boolean_true.snap
---
source: crates/mcf/src/syntax/grammar/nbt.rs
expression: "parse_nbt(\"true\")"
---
Joined(NbtBoolean) `true` at 0:0 - 0:4

