crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__nbt__tests__compound_empty.snap
---
source: crates/mcf/src/syntax/grammar/nbt.rs
expression: "parse_nbt(\"{}\")"
---
Group(NbtCompound) at 0:0 - 0:2 {
    Token(LCurly) `{` at 0:0 - 0:1
    Token(RCurly) `}` at 0:1 - 0:2
}

