crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__nbt__tests__empty.snap
---
source: crates/mcf/src/syntax/grammar/nbt.rs
expression: "parse_path(\"\")"
---
Root(File)
Group(NbtPath) at 0:0 - 0:0 {
    Group(NbtPathSegment) at 0:0 - 0:0 {
        Error `Error while parsing 'NbtPathSegment'` at 0:0 - 0:0
    }
}

