crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__nbt__tests__float_no_prec.snap
---
source: crates/mcf/src/syntax/grammar/nbt.rs
expression: "parse_nbt(\".37412\")"
---
Root(File)
Group(NbtNumber) at 0:0 - 0:6 {
    Joined(Float) `.37412` at 0:0 - 0:6
}

