crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__nbt__tests__float_no_trail.snap
---
source: crates/mcf/src/syntax/grammar/nbt.rs
expression: "parse_nbt(\"645423.\")"
---
Root(File)
Group(NbtNumber) at 0:0 - 0:7 {
    Joined(Float) `645423.` at 0:0 - 0:7
}

